<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VUSB Client</string>
    <string name="app_description">Virtual USB Device Client</string>
    
    <!-- Connection -->
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected</string>
    <string name="status_error">Error</string>
    
    <!-- Actions -->
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_attach">Attach</string>
    <string name="action_detach">Detach</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_attach_all">Attach All</string>
    <string name="action_grant_permission">Grant Permission</string>
    
    <!-- Device status -->
    <string name="device_attached">Attached</string>
    <string name="device_available">Available</string>
    <string name="device_no_permission">Permission required</string>
    
    <!-- Settings -->
    <string name="pref_category_server">Server Settings</string>
    <string name="pref_server_address">Server Address</string>
    <string name="pref_server_address_summary">IP address or hostname of the VUSB server</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_server_port_summary">Default: 7575</string>
    
    <string name="pref_category_behavior">Behavior</string>
    <string name="pref_auto_start">Auto-start on Boot</string>
    <string name="pref_auto_start_summary">Start forwarding service when device boots</string>
    <string name="pref_auto_attach">Auto-attach Devices</string>
    <string name="pref_auto_attach_summary">Automatically attach all USB devices on connect</string>
    <string name="pref_auto_attach_new">Auto-attach New Devices</string>
    <string name="pref_auto_attach_new_summary">Automatically attach newly connected USB devices</string>
    
    <string name="pref_category_about">About</string>
    <string name="pref_version">Version</string>
    <string name="pref_version_summary">1.0.0</string>
    
    <!-- Notifications -->
    <string name="notification_channel_name">USB Forwarding</string>
    <string name="notification_channel_description">Shows USB forwarding status</string>
    <string name="notification_title">VUSB Client</string>
    <string name="notification_text_connected">Connected to %1$s</string>
    <string name="notification_text_devices">Forwarding %1$d device(s)</string>
    
    <!-- Errors -->
    <string name="error_no_server">Please enter server address</string>
    <string name="error_connection_failed">Connection failed</string>
    <string name="error_device_open_failed">Failed to open device</string>
    <string name="error_no_permission">USB permission denied</string>
</resources>
